# suffix_array

./: CMakeLists.txt  DC3.cpp  DC3.hpp  README.md  SAIS.hpp  sais.hpp
unit_test/: DC3_test.cpp  SAIS_test.cpp
unit_test/test_data/: strings.txt
